# standup-tool

./: .gitignore  LICENSE  README.md  log.jsonl  pyproject.toml  standup.py
tests/: test_amend.py  test_append_entry.py  test_build_entry.py  test_close_standup.py  test_history.py  test_ids.py  test_latest_prior.py  test_log_tracked.py  test_open_standup.py  test_read_entries.py  test_skeleton.py  test_submit_open.py  test_timestamps.py
