[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "standup-tool"
version = "0.1.0"
description = "Append-only daily-standup logging tool with JSONL persistence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nick Trolian" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
